# dht11-pi

./: CMakeLists.txt  dht11.c
